Fix language function

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -1,4 +1,5 @@
 {
+    "title":"السبع حروف ",
     "welcome_message": "مرحبًا بكم في موقعنا!",
     "about_us": "اعرف المزيد عنا...",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
