--- a/languages/en.json
+++ b/languages/en.json
@@ -1,4 +1,5 @@
 {
+    "title":"Seven Letters",
     "welcome_message": "Welcome to Our Website!",
     "about_us": "Learn more about us...",
     "footer_text": "© 2023 All rights reserved."
