Add fonts and images

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -1,6 +1,11 @@
 {
     "title":"السبع حروف ",
-    "welcome_message": "مرحبًا بكم في موقعنا!",
+    "who-us":"من نحن",
+    "serves":"خدماتنا",
+    "creativity":"لماذا نُبدع",
+    "team":"فريق العمل",
+    "welcome-p1":"تعزيز نجــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــاح أعمالك",
+    "welcome-p2":"اكتشف حلولـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــنا اليــــــــــوم ",
     "about_us": "اعرف المزيد عنا...",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
