--- a/languages/en.json
+++ b/languages/en.json
@@ -1,6 +1,11 @@
 {
     "title":"Seven Letters",
-    "welcome_message": "Welcome to Our Website!",
+    "who-us":"Who are we",
+    "serves":"Serves",
+    "creativity":" why we are creative",
+    "team":"Team",
+     "welcome-p1":"why we are creative ssssssssssssssczcasd",
+    "welcome-p2":"ladd you to the world of creativity and innovation, where",
     "about_us": "Learn more about us...",
     "footer_text": "© 2023 All rights reserved."
 }
