Finish section two

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -6,6 +6,10 @@
     "team":"فريق العمل",
     "welcome-p1":"تعزيز نجــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــاح أعمالك",
     "welcome-p2":"اكتشف حلولـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــنا اليــــــــــوم ",
-    "about_us": "اعرف المزيد عنا...",
+    "about_us1": "مؤسسـة سـعـوديـة خبيرــة في التســويـق الـرقـمي وصناعـة التـأثير،",
+    "about_us2": "تـهـدف إلى زيــادة انـتشـار المــــــــــــــــــــــنشات في الإعـلام الـرقمـي مـن خـلال ",
+    "about_us3": "مــحــــــــــــــــتـــــــــــــــــوى إبـــــــــــــــــــداعــــــــــــــــي وخـــــــــــــــــــدمــــــــــــــــــــــــــــــــات متنـــــوعــــــــــــــــــة ",
+    "about_us4": "نتتـرك بصـمـة مميــزة في كـل مكــان بفضــــــــــــــــــــــــل فريق مـن المبــدعين",
+
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
