--- a/languages/en.json
+++ b/languages/en.json
@@ -6,6 +6,10 @@
     "team":"Team",
      "welcome-p1":"why we are creative ssssssssssssssczcasd",
     "welcome-p2":"ladd you to the world of creativity and innovation, where",
-    "about_us": "Learn more about us...",
+    "about_us1": "Learn more about us...",
+    "about_us2": "Learn more about us...",
+    "about_us3": "Learn more about us...",
+    "about_us5": "Learn more about us...",
+
     "footer_text": "© 2023 All rights reserved."
 }
