Add creativity section

--- a/languages/en.json
+++ b/languages/en.json
@@ -10,6 +10,7 @@
     "about_us2": "Learn more about us...",
     "about_us3": "Learn more about us...",
     "about_us5": "Learn more about us...",
+    "why-creative":"why we are creative?",
 
     "footer_text": "© 2023 All rights reserved."
 }
