--- a/languages/ar.json
+++ b/languages/ar.json
@@ -1,6 +1,6 @@
 {
     "title":"السبع حروف ",
-    "who-us":"من نحن",
+    "who-us":"من نحن؟",
     "serves":"خدماتنا",
     "creativity":"لماذا نُبدع",
     "team":"فريق العمل",
@@ -10,6 +10,12 @@
     "about_us2": "تـهـدف إلى زيــادة انـتشـار المــــــــــــــــــــــنشات في الإعـلام الـرقمـي مـن خـلال ",
     "about_us3": "مــحــــــــــــــــتـــــــــــــــــوى إبـــــــــــــــــــداعــــــــــــــــي وخـــــــــــــــــــدمــــــــــــــــــــــــــــــــات متنـــــوعــــــــــــــــــة ",
     "about_us4": "نتتـرك بصـمـة مميــزة في كـل مكــان بفضــــــــــــــــــــــــل فريق مـن المبــدعين",
-
+     "why-creative":"لماذا نُبدع ونبتكر؟",
+     "box-header-1":"تحقيق التوازن",
+     "box-p-1":"تحقيق تقارب أكبر بين العالم الرقمي والواقعي من خلال استثمار الإبداع والابتكار في تحسين الخدمات والمنتجات المقدمة.",
+     "box-header-2":"عقلية الفوز",
+    "box-p-2":"استغلال الإبداع والابتكار كفرصة لتقديم الجديد والمميز للعملاء، بهدف تحقيق التفوق على المنافسين.",
+    "box-header-3":"سر النجاح",
+    "box-p-3":"الاعتقاد بأن الإبداع والابتكار هما مفاتيح النجاح والمتعة في العمل.",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
