--- a/languages/ar.json
+++ b/languages/ar.json
@@ -4,8 +4,8 @@
     "serves":"خدماتنا",
     "creativity":"لماذا نُبدع",
     "team":"فريق العمل",
-    "welcome-p1":"تعزيز نجــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــاح أعمالك",
-    "welcome-p2":"اكتشف حلولـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــنا اليــــــــــوم ",
+    "welcome-p1":"تعزيز نجــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــاح أعمالك",
+    "welcome-p2":"اكتشف حلولـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــنا اليــــــــــوم ",
     "about_us1": "مؤسسـة سـعـوديـة خبيرــة في التســويـق الـرقـمي وصناعـة التـأثير،",
     "about_us2": "تـهـدف إلى زيــادة انـتشـار المــــــــــــــــــــــنشات في الإعـلام الـرقمـي مـن خـلال ",
     "about_us3": "مــحــــــــــــــــتـــــــــــــــــوى إبـــــــــــــــــــداعــــــــــــــــي وخـــــــــــــــــــدمــــــــــــــــــــــــــــــــات متنـــــوعــــــــــــــــــة ",
