Add servies section

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -17,5 +17,6 @@
     "box-p-2":"استغلال الإبداع والابتكار كفرصة لتقديم الجديد والمميز للعملاء، بهدف تحقيق التفوق على المنافسين.",
     "box-header-3":"سر النجاح",
     "box-p-3":"الاعتقاد بأن الإبداع والابتكار هما مفاتيح النجاح والمتعة في العمل.",
+    "serves-box":" نقدم من خلال خبراتنــــــــــــا خطة تسويقية مخصصة، نستهدف من خلالها الوصــول إلى الجمــــــــــــهور المستــــــــــــــــــــــــــــــــــــــــــــــــــــــــــهدف وكسب جمــــــــــــــــــهور جــــــديد مــــــــــــــــــن خلال" ,
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
