Add images to serves section

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -18,5 +18,8 @@
     "box-header-3":"سر النجاح",
     "box-p-3":"الاعتقاد بأن الإبداع والابتكار هما مفاتيح النجاح والمتعة في العمل.",
     "serves-box":" نقدم من خلال خبراتنــــــــــــا خطة تسويقية مخصصة، نستهدف من خلالها الوصــول إلى الجمــــــــــــهور المستــــــــــــــــــــــــــــــــــــــــــــــــــــــــــهدف وكسب جمــــــــــــــــــهور جــــــديد مــــــــــــــــــن خلال" ,
+    "digital-marketing":"التسويق الرقمي",
+    "serves-box-p1":"التســــــــويـــــــق عبر المـــــــــــــــــــــــــؤثرين",
+    "serves-box-p2":" التسويق عبر الإعلانات الممول",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
