--- a/languages/ar.json
+++ b/languages/ar.json
@@ -4,6 +4,11 @@
     "serves":"خدماتنا",
     "creativity":"لماذا نُبدع",
     "team":"فريق العمل",
+    "team-p":"لدينا فريق عمل مدرب ومبدع، قادر على إنجاز المهام  وتنفيذها بأعلى مستوى من الجــــــــــــــــــــــــودة والاحترافية.   ",
+    "team-p1":"لدينا ",
+    "team-p2":"فريق عمل",
+    "team-p3":"مدرب ومبدع، قادر على إنجاز المهام  وتنفيذها بأعلى مستوى من ",
+    "team-p4":" الجــــــــــــــــــــــــودة والاحترافية.  ",
     "welcome-p1":"تعزيز نجــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــاح أعمالك",
     "welcome-p2":"اكتشف حلولـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــنا اليــــــــــوم ",
     "about_us1": "مؤسسـة سـعـوديـة خبيرــة في التســويـق الـرقـمي وصناعـة التـأثير،",
