Finish servies section

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -26,5 +26,9 @@
     "digital-marketing":"التسويق الرقمي",
     "serves-box-p1":"التســــــــويـــــــق عبر المـــــــــــــــــــــــــؤثرين",
     "serves-box-p2":" التسويق عبر الإعلانات الممول",
+    "creative-content":"المحتوى الإبداعي",
+    "content-box":"إن كل الأفكار الجيدة لإنتاج محتوى إبداعي لا تستطيع أن تصل بنفس الجــــــــــــودة إلى عقول الآخرين ما لم تكن قادرة على إيجاد وسيلة للتواصل تعطي الفكرة عوامل الاستيعاب الكاملة، مــــن خلال اختيار الكلمات وترتيبها ببراعة للوصول بالمعنـى إلى الإدراك الحسي المطلوب",
+    "content-box-p1":"محتوى نصــــــــــــــــــــــــــــــــــــــــــــــــــــي",
+    "content-box-p2":"محتوى بصــــــــــــــــــــــــــــــــــــــــــــــــري",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
