Finish servies section

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -30,5 +30,13 @@
     "content-box":"إن كل الأفكار الجيدة لإنتاج محتوى إبداعي لا تستطيع أن تصل بنفس الجــــــــــــودة إلى عقول الآخرين ما لم تكن قادرة على إيجاد وسيلة للتواصل تعطي الفكرة عوامل الاستيعاب الكاملة، مــــن خلال اختيار الكلمات وترتيبها ببراعة للوصول بالمعنـى إلى الإدراك الحسي المطلوب",
     "content-box-p1":"محتوى نصــــــــــــــــــــــــــــــــــــــــــــــــــــي",
     "content-box-p2":"محتوى بصــــــــــــــــــــــــــــــــــــــــــــــــري",
+    "chart":" إعداد خطــــــة شهرية",
+    "chart1":"إنتاج محتـــــوى نصي", 
+    "chart2":"إنتاج محتوى بصري",
+    "chart3":"تقديم خدمة العملاء",
+    "chart4":"قياس التفـــــــــــــــــــــــــاعل",
+    "account-mange":"إدارة الحسابات :",
+    "account-mange-p":"أصبحت حسابات التواصل الاجتماعي من أبـــــــــرز وسائل التعريف بالنسبة للشركات والمؤسسات، وهي تعد أحد المؤشرات الأساسية للانطبـــــــــــــــاع الأول عند العملاء. لـذا، نضع كل إمكانياتنا في خدمة عــــــــــــــــــــملائنا من خـلال إدارة حساباتهم على منصات التــــــــــــــــــــواصل الاجـــــــــــــــــــــــــــــــتماعي وذلك من خلال:",
+    "media-data":"الوسائط",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
