Add multi media section

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -38,5 +38,15 @@
     "account-mange":"إدارة الحسابات :",
     "account-mange-p":"أصبحت حسابات التواصل الاجتماعي من أبـــــــــرز وسائل التعريف بالنسبة للشركات والمؤسسات، وهي تعد أحد المؤشرات الأساسية للانطبـــــــــــــــاع الأول عند العملاء. لـذا، نضع كل إمكانياتنا في خدمة عــــــــــــــــــــملائنا من خـلال إدارة حساباتهم على منصات التــــــــــــــــــــواصل الاجـــــــــــــــــــــــــــــــتماعي وذلك من خلال:",
     "media-data":"الوسائط",
+    "multi-container-2-header":"المتعــــــــــــــــــــــــــددة",
+    "prints":"المطبوعــــــــــــــــــــــــــــات",
+    "video-editing":"المونتاج تحرير الفيديو", 
+    "motion-graphics":"الموشــــــــــــــــــــــــــــن جرافيكس",
+    "visual-content":"المحتــــــوى المرئي", 
+    "visual-content-p":"نحن نلتزم بأحدث المعايير في هذا المجال، حيث يلعب دورنا دورًا كبيرًا في معظم الأعمال التي تندرج ضمن قطاعات الدعاية والإعلان وصناعة المحتوى، وذلك من خلال:", 
+    "graphic-design":"تصميــم الجرافيك", 
+    "identity-design":"تصميــم الهوية البصرية",
+     "social-media-design":"تصاميم السوشيال ميديا", 
+    "social-media-camping":"تصميـــــــــــــــــــم البـــــــــــــــــــروفـــــــــــــــــــايــــــــــــــــــــــــــــــــــــــلات والعـــــــــــــــــــــــــــــــــــــــــــــــــــــــــروض الترويجيـــــــــــــــــــة",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
