Finish before footer section

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -48,5 +48,6 @@
     "identity-design":"تصميــم الهوية البصرية",
      "social-media-design":"تصاميم السوشيال ميديا", 
     "social-media-camping":"تصميـــــــــــــــــــم البـــــــــــــــــــروفـــــــــــــــــــايــــــــــــــــــــــــــــــــــــــلات والعـــــــــــــــــــــــــــــــــــــــــــــــــــــــــروض الترويجيـــــــــــــــــــة",
+    "before-footer":"وهذا يتطلب التزاماً كاملاً بمختلف العوامل التي تدفع نحو النجاح وتعزز التميز الإيجابي",
     "footer_text": "© 2023 جميع الحقوق محفوظة."
 }
