--- a/languages/ar.json
+++ b/languages/ar.json
@@ -50,6 +50,5 @@
     "social-media-camping":"تصميـــــــــــــــــــم البـــــــــــــــــــروفـــــــــــــــــــايــــــــــــــــــــــــــــــــــــــلات والعـــــــــــــــــــــــــــــــــــــــــــــــــــــــــروض الترويجيـــــــــــــــــــة",
     "before-footer":"وهذا يتطلب التزاماً كاملاً بمختلف العوامل التي تدفع نحو النجاح وتعزز التميز الإيجابي",
     "send":"تواصل معنا",
-    "contact-us":"انضم الى نشرة الاخبار الخاصة بنا",
-    "footer_text": "© 2023 جميع الحقوق محفوظة."
+    "contact-us":"انضم الى نشرة الاخبار الخاصة بنا"
 }
