--- a/languages/en.json
+++ b/languages/en.json
@@ -1,16 +1,49 @@
 {
-    "title":"Seven Letters",
-    "who-us":"Who are we",
-    "serves":"Serves",
-    "creativity":" why we are creative",
-    "team":"Team",
-     "welcome-p1":"why we are creative ssssssssssssssczcasd",
-    "welcome-p2":"ladd you to the world of creativity and innovation, where",
-    "about_us1": "Learn more about us...",
-    "about_us2": "Learn more about us...",
-    "about_us3": "Learn more about us...",
-    "about_us5": "Learn more about us...",
-    "why-creative":"why we are creative?",
-
-    "footer_text": "© 2023 All rights reserved."
+    "title":"seven letters",
+    "who-us":"Who are we?",
+    "serves":"Our Services",
+    "creativity":"Why are we creative?",
+    "team":"Our Team",
+    "welcome-p1":"Enhance your business success",
+    "welcome-p2":"Discover our solutions today",
+    "about_us1": "We are a Saudi institution specialized in digital marketing and influence building.",
+    "about_us2": " ِAiming to increase the spread of establishments in digital media ",
+    "about_us3": "through creative content and diverse services .",
+    "about_us4": "Leaving a distinctive mark everywhere thanks to a team of innovators.",
+     "why-creative":"Why do we innovate?",
+     "box-header-1":"Achieve balance",
+     "box-p-1":"Achieving greater convergence between the digital and real world by investing creativity and innovation in improving the services and products provided.",
+     "box-header-2":"Winning mentality",
+    "box-p-2":"Exploiting creativity and innovation as an opportunity to provide the new and distinctive to customers, with the aim of achieving superiority over competitors.",
+    "box-header-3":"secret of success",
+    "box-p-3":"Believing that creativity and innovation are the keys to success and enjoyment at work.",
+    "serves-box":"Through our expertise, we offer a customized marketing plan to reach the target audience and gain a new audience through:", 
+    "digital-marketing":"Digital Marketing",
+    "serves-box-p1":"Influencer Marketing",
+    "serves-box-p2":"Sponsored Advertising",
+    "creative-content":"Creative Content:",
+    "content-box":"All good ideas for producing creative content cannot reach the minds of others with the same quality unless they are able to find a means of communication that provides the idea with all the factors of complete comprehension, by carefully choosing and arranging words to convey the meaning to the desired sensory perception.",
+    "content-box-p1":"Textual Content",
+    "content-box-p2":"Visual Content",
+    "chart":"Monthly planning",
+    "chart1":"Textual content production", 
+    "chart2":"Visual content production",
+    "chart3":"Customer service",
+    "chart4":"Interaction measurement",
+    "account-mange":"Account Management:",
+    "account-mange-p":"Social media accounts have become one of the most prominent means of identification for companies and institutions, and they are one of the key indicators of the first impression on customers. Therefore, we put all our capabilities at the service of our clients by managing their accounts on social media platforms, through:",
+    "media-data":"media",
+    "multi-container-2-header":"Multi",
+    "prints":"Prints",
+    "video-editing":"Video editing", 
+    "motion-graphics":"Motion graphics",
+    "visual-content":"Visual Content", 
+    "visual-content-p":"We are committed to the latest standards in this field, where our role plays a significant role in most of the work that falls within the sectors of advertising, publicity, and content creation, through:", 
+    "graphic-design":"Graphic design", 
+    "identity-design":"Visual identity design",
+     "social-media-design":"Social media designs" , 
+    "social-media-camping":"Profile and promotional designs",
+    "before-footer":"This requires full commitment to various factors that drive success and enhance positive distinction.",
+    "send":"Contact us",
+    "contact-us":"Join our newsletter"
 }
