Finish desctop design en and ar

--- a/languages/en.json
+++ b/languages/en.json
@@ -32,7 +32,7 @@
     "chart4":"Interaction measurement",
     "account-mange":"Account Management:",
     "account-mange-p":"Social media accounts have become one of the most prominent means of identification for companies and institutions, and they are one of the key indicators of the first impression on customers. Therefore, we put all our capabilities at the service of our clients by managing their accounts on social media platforms, through:",
-    "media-data":"media",
+    "media-data":"Media",
     "multi-container-2-header":"Multi",
     "prints":"Prints",
     "video-editing":"Video editing", 
