Add responsive for Arabic

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -4,6 +4,8 @@
     "serves":"خدماتنا",
     "creativity":"لماذا نُبدع",
     "team":"فريق العمل",
+    "welcome-p1-mob":"تعزيز نجاح أعمالك اكتشف حلــــــــــــــــــولـنا",
+    "welcome-p2-mob":"اليــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــوم",
     "team-p":"لدينا فريق عمل مدرب ومبدع، قادر على إنجاز المهام  وتنفيذها بأعلى مستوى من الجــــــــــــــــــــــــودة والاحترافية.   ",
     "team-p1":"لدينا ",
     "team-p2":"فريق عمل",
