--- a/languages/en.json
+++ b/languages/en.json
@@ -4,6 +4,8 @@
     "serves":"Our Services",
     "creativity":"Why are we creative?",
     "team":"Our Team",
+    "welcome-p1-mob":"Enhance your business success",
+    "welcome-p2-mob":"Discover our solutions today",
     "welcome-p1":"Enhance your business success",
     "welcome-p2":"Discover our solutions today",
     "about_us1": "We are a Saudi institution specialized in digital marketing and influence building.",
