style toggle menue

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -13,7 +13,7 @@
     "team-p4":" الجــــــــــــــــــــــــودة والاحترافية.  ",
     "welcome-p1":"تعزيز نجــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــاح أعمالك",
     "welcome-p2":"اكتشف حلولـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــنا اليــــــــــوم ",
-    "about_us1": "مؤسسـة سـعـوديـة خبيرــة في التســويـق الـرقـمي وصناعـة التـأثير،",
+    "about_us1": "مؤسسـة سـعـوديـة خبيرة في التســويـق الـرقـمي وصناعـة التـأثير،",
     "about_us2": "تـهـدف إلى زيــادة انـتشـار المــــــــــــــــــــــنشات في الإعـلام الـرقمـي مـن خـلال ",
     "about_us3": "مــحــــــــــــــــتـــــــــــــــــوى إبـــــــــــــــــــداعــــــــــــــــي وخـــــــــــــــــــدمــــــــــــــــــــــــــــــــات متنـــــوعــــــــــــــــــة ",
     "about_us4": "نتتـرك بصـمـة مميــزة في كـل مكــان بفضــــــــــــــــــــــــل فريق مـن المبــدعين",
