--- a/languages/ar.json
+++ b/languages/ar.json
@@ -5,7 +5,7 @@
     "creativity":"لماذا نُبدع",
     "team":"فريق العمل",
     "welcome-p1-mob":"تعزيز نجاح أعمالك اكتشف حلــــــــــــــــــولـنا",
-    "welcome-p2-mob":"اليـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــوم",
+    "welcome-p2-mob":"اليــــــــــــــــــــــوم",
     "team-p":"لدينا فريق عمل مدرب ومبدع، قادر على إنجاز المهام  وتنفيذها بأعلى مستوى من الجــــــــــــــــــــــــودة والاحترافية.   ",
     "team-p1":"لدينا ",
     "team-p2":"فريق عمل",
